Add conclusion + modifications final

--- a/GroverVectorExperiment/GroverVector.ipynb
+++ b/GroverVectorExperiment/GroverVector.ipynb
@@ -13,8 +13,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Grover's Algorithm Case Study with GreenQuest\n",
+    "\n",
+    "Grover's algorithm allows us to find a particular register or in this case vector in an unordered database with $N$ entries in just $O(\\sqrt{N})$ steps, compared to the best classical algorithm taking on average $N/2$ steps, thereby providing a __quadratic speedup__.\n",
+    "\n",
+    "For large databases (with a large number of entries, $N$), a quadratic speedup can provide a significant advantage. For a database with one million entries, a quantum computer running Grover's algorithm would need about 1000 runs, while a classical computer would need, on average, $500$k runs.\n",
+    "\n",
+    "Research has been shown that any optimal quantum solution to an unstructured search problem has a speed limit of $O(\\sqrt{N})$ runtime. This research finding matches the performance of Grover's algorithm, thus proving that the algorithm is asymptotically optimal. In fact, Grover's algorithm can be generalized to accelerate any type of search where one can construct a quantum oracle. \n",
+    "\n",
+    "In the context of GreenQuest's top-k scoring method, Grover's algorithm could be used to significantly improve the efficiency of searching and ranking user activities based on sustainability impact. With a vast database of user actions and their sustainability scores, Grover's algorithm could quickly identify the top-scoring actions. This efficiency is crucial for real-time applications where immediate access to the most impactful sustainability actions is necessary. Integrating Grover's algorithm into GreenQuest could theorectically enhance the platform's capability to offer quicker, more efficient services, thus fostering greater user engagement and promoting effective sustainability practices. While this Quantum Scoring System was never used in the demo version, I thought it would be cool to share it in this notebook the testing methods of what could've been. \n",
+    "\n",
+    "This notebook is a primitive test case to use for replication and shouldn't be considered production grade code."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Replication \n",
-    "To replicate, we must first install Qiskit (Tests were done on Quantum Hardware (IOQ)). Bless the people at AWS who let Free Tier members have 1 Hour of Free Circuit Simulator Time."
+    "To replicate, we must first install Qiskit (Tests were done on Quantum Hardware (IOQ) ). Bless the people at AWS who let Free Tier members have 1 Hour of Free Circuit Simulator Time."
    ]
   },
   {
@@ -106,23 +123,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\Ty Chermsirivatana\\AppData\\Local\\Temp\\ipykernel_1152\\4228560633.py:2: DeprecationWarning: ``qiskit.algorithms`` has been migrated to an independent package: https://github.com/qiskit-community/qiskit-algorithms. The ``qiskit.algorithms`` import path is deprecated as of qiskit-terra 0.25.0 and will be removed no earlier than 3 months after the release date. Please run ``pip install qiskit_algorithms`` and use ``import qiskit_algorithms`` instead.\n",
-      "  from qiskit.algorithms import AmplificationProblem, Grover\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from qiskit import Aer, transpile, assemble\n",
     "from qiskit.algorithms import AmplificationProblem, Grover\n",
     "from qiskit.circuit.library import Diagonal\n",
     "import numpy as np\n",
+    "import time\n",
     "from sklearn.feature_extraction.text import TfidfVectorizer"
    ]
   },
@@ -135,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,23 +170,38 @@
     "    diag_elements = np.ones(len(vectors))\n",
     "    diag_elements[top_k_indices] = -1\n",
     "    oracle = Diagonal(diag_elements)\n",
-    "    return oracle, top_k_indices\n",
+    "    return oracle, top_k_indices, similarities\n",
     "\n",
-    "#Step 3: Run Grover's Algorithm for Top-K Scoring\n",
-    "def run_grovers_algorithm_top_k(query_vector, vectors, k):\n",
-    "    oracle, top_k_indices = prepare_oracle_top_k(query_vector, vectors, k)\n",
-    "    problem = AmplificationProblem(oracle, is_good_state=lambda x: x in top_k_indices)\n",
-    "    grover = Grover()\n",
-    "    backend = Aer.get_backend('qasm_simulator')\n",
-    "    qc = grover.construct_circuit(problem, power=1)\n",
-    "    qc.measure_all()\n",
-    "    tqc = transpile(qc, backend)\n",
-    "    qobj = assemble(tqc)\n",
-    "    result = backend.run(qobj).result()\n",
-    "    measurements = result.get_counts(qc)  # Retrieve counts for the specific circuit\n",
-    "    most_frequent = max(measurements, key=measurements.get)\n",
-    "    found_index = int(most_frequent, 2)\n",
-    "    return found_index\n",
+    "#Step 3: Run Grover's Algorithm for Top-K Scoring. This does use some timing functions so it isn't as efficent.\n",
+    "def run_grovers_algorithm_top_k(query_vector, vectors, texts, k):\n",
+    "    top_k_results = []\n",
+    "    for _ in range(k):\n",
+    "        start_time = time.time()\n",
+    "        oracle, potential_top_k_indices, similarities = prepare_oracle_top_k(query_vector, vectors, k)\n",
+    "        problem = AmplificationProblem(oracle, is_good_state=lambda x: x in potential_top_k_indices)\n",
+    "        grover = Grover()\n",
+    "        backend = Aer.get_backend('qasm_simulator')\n",
+    "        qc = grover.construct_circuit(problem, power=1)\n",
+    "        qc.measure_all()\n",
+    "        tqc = transpile(qc, backend)\n",
+    "        qobj = assemble(tqc)\n",
+    "        result = backend.run(qobj).result()\n",
+    "        measurements = result.get_counts(qc)\n",
+    "        most_frequent = max(measurements, key=measurements.get)\n",
+    "        found_index = int(most_frequent, 2)\n",
+    "        end_time = time.time()\n",
+    "        # Store results including the text and similarity score\n",
+    "        result_info = {\n",
+    "            'index': found_index,\n",
+    "            'vector': vectors[found_index] if found_index < len(vectors) else None,\n",
+    "            'text': texts[found_index] if found_index < len(texts) else None,\n",
+    "            'score': similarities[found_index],\n",
+    "            'time': end_time - start_time\n",
+    "        }\n",
+    "        top_k_results.append(result_info)\n",
+    "\n",
+    "    return top_k_results\n",
+    "\n",
     "\n"
    ]
   },
@@ -192,22 +216,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
     "greenquest_text_strings = [\n",
-    "    \"How can I earn points for recycling at home with GreenQuest?\",\n",
-    "    \"GreenQuest tips for reducing energy consumption in the office\",\n",
-    "    \"Sustainable transportation options supported by GreenQuest\",\n",
-    "    \"GreenQuest community initiatives for local environmental impact\",\n",
-    "    \"Using GreenQuest to track and improve my carbon footprint\",\n",
-    "    \"GreenQuest partnerships with renewable energy providers\",\n",
-    "    \"Eco-friendly product recommendations from GreenQuest\",\n",
-    "    \"GreenQuest's role in promoting urban green spaces\",\n",
-    "    \"Water conservation strategies with GreenQuest's guidance\",\n",
-    "    \"Impact of GreenQuest on corporate sustainability practices\"\n",
-    "]"
+    "    \"Tell me about the Center for Sustainability Education (CSE) and it's objectives.\",  # Query vector\n",
+    "    \"The CSE at Dickinson focuses on integrating sustainability into the college's liberal arts curriculum and promoting civic action among students.\",\n",
+    "    \"Sustainability and social justice are key components of Dickinson's educational approach, as guided by the Center for Sustainability Education.\",\n",
+    "    \"Dickinson College's CSE has been instrumental in advancing sustainability and environmental awareness in higher education.\",\n",
+    "    \"How does the CSE's strategic plan address challenges like reduced staffing and financial resources while maintaining its sustainability goals?\",\n",
+    "    \"The Center for Sustainability Education emphasizes the importance of global interdependence and equity in its sustainability teachings.\",\n",
+    "    \"CSE's efforts to make antiracism and social justice central to sustainability practices reflect Dickinson College's commitment to inclusivity.\",\n",
+    "    \"What new goals has the Center for Sustainability Education set for the 2021-2026 period to enhance its educational and civic impact?\",\n",
+    "    \"Dickinson's CSE offers students opportunities to develop sustainability skills through various co-curricular programs and off-campus studies.\",\n",
+    "    \"As a leader in sustainability education, how does the Center for Sustainability Education at Dickinson attract and retain high-quality faculty and staff?\"\n",
+    "]\n"
    ]
   },
   {
@@ -219,22 +243,90 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Indices of the top K found vectors: [8, 5, 0]\n"
-     ]
-    },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Ty Chermsirivatana\\AppData\\Local\\Temp\\ipykernel_1152\\2180144110.py:35: DeprecationWarning: Using a qobj for run() is deprecated as of qiskit-aer 0.9.0 and will be removed no sooner than 3 months from that release date. Transpiled circuits should now be passed directly using `backend.run(circuits, **run_options).\n",
+      "C:\\Users\\Ty Chermsirivatana\\AppData\\Local\\Temp\\ipykernel_1152\\3333038729.py:38: DeprecationWarning: Using a qobj for run() is deprecated as of qiskit-aer 0.9.0 and will be removed no sooner than 3 months from that release date. Transpiled circuits should now be passed directly using `backend.run(circuits, **run_options).\n",
       "  result = backend.run(qobj).result()\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index: 4\n",
+      "Text: How does the CSE's strategic plan address challenges like reduced staffing and financial resources while maintaining its sustainability goals?\n",
+      "Vector: [0.         0.         0.         0.         0.26242935 0.\n",
+      " 0.         0.09702543 0.         0.         0.         0.\n",
+      " 0.         0.         0.         0.         0.         0.\n",
+      " 0.         0.         0.         0.26242935 0.         0.\n",
+      " 0.         0.         0.         0.14087948 0.         0.\n",
+      " 0.         0.         0.22308893 0.         0.         0.\n",
+      " 0.         0.         0.         0.         0.         0.26242935\n",
+      " 0.         0.         0.         0.22308893 0.         0.\n",
+      " 0.         0.         0.22308893 0.         0.         0.\n",
+      " 0.         0.         0.         0.         0.         0.\n",
+      " 0.19517645 0.         0.         0.         0.         0.26242935\n",
+      " 0.26242935 0.         0.         0.         0.         0.\n",
+      " 0.         0.         0.         0.         0.         0.26242935\n",
+      " 0.         0.         0.         0.         0.26242935 0.\n",
+      " 0.26242935 0.         0.         0.         0.         0.\n",
+      " 0.26242935 0.26242935 0.         0.         0.09702543 0.\n",
+      " 0.         0.12792354 0.         0.         0.         0.\n",
+      " 0.26242935]\n",
+      "Similarity Score: 1.0000\n",
+      "Time taken: 0.0270 seconds\n",
+      "\n",
+      "Index: 5\n",
+      "Text: The Center for Sustainability Education emphasizes the importance of global interdependence and equity in its sustainability teachings.\n",
+      "Vector: [0.         0.         0.         0.         0.         0.\n",
+      " 0.         0.1143364  0.         0.         0.         0.\n",
+      " 0.         0.         0.         0.         0.         0.\n",
+      " 0.         0.18363978 0.         0.         0.         0.\n",
+      " 0.         0.         0.         0.         0.         0.\n",
+      " 0.         0.         0.         0.16601475 0.         0.\n",
+      " 0.30925115 0.         0.         0.30925115 0.         0.\n",
+      " 0.         0.18363978 0.30925115 0.         0.         0.\n",
+      " 0.         0.         0.         0.         0.30925115 0.2299992\n",
+      " 0.         0.         0.         0.30925115 0.         0.\n",
+      " 0.2299992  0.         0.         0.         0.         0.\n",
+      " 0.         0.         0.         0.         0.         0.26289173\n",
+      " 0.         0.         0.         0.         0.         0.\n",
+      " 0.         0.         0.         0.         0.         0.\n",
+      " 0.         0.         0.         0.         0.         0.\n",
+      " 0.         0.         0.         0.         0.22867279 0.30925115\n",
+      " 0.         0.3014945  0.         0.         0.         0.\n",
+      " 0.        ]\n",
+      "Similarity Score: 1.0000\n",
+      "Time taken: 0.0240 seconds\n",
+      "\n",
+      "Index: 9\n",
+      "Text: As a leader in sustainability education, how does the Center for Sustainability Education at Dickinson attract and retain high-quality faculty and staff?\n",
+      "Vector: [0.         0.         0.         0.         0.         0.\n",
+      " 0.         0.19818311 0.         0.         0.         0.\n",
+      " 0.22783953 0.22783953 0.26801769 0.         0.         0.\n",
+      " 0.         0.15915449 0.         0.         0.         0.\n",
+      " 0.         0.         0.         0.         0.         0.\n",
+      " 0.         0.14387946 0.22783953 0.28775893 0.         0.\n",
+      " 0.         0.         0.         0.         0.26801769 0.\n",
+      " 0.         0.15915449 0.         0.         0.         0.\n",
+      " 0.26801769 0.         0.22783953 0.         0.         0.19933266\n",
+      " 0.         0.         0.         0.         0.         0.\n",
+      " 0.         0.         0.         0.26801769 0.         0.\n",
+      " 0.         0.         0.         0.         0.         0.\n",
+      " 0.         0.         0.         0.         0.         0.\n",
+      " 0.         0.         0.         0.26801769 0.         0.\n",
+      " 0.         0.26801769 0.         0.         0.         0.26801769\n",
+      " 0.         0.         0.         0.         0.19818311 0.\n",
+      " 0.         0.13064763 0.         0.         0.         0.\n",
+      " 0.        ]\n",
+      "Similarity Score: 1.0000\n",
+      "Time taken: 0.0271 seconds\n",
+      "\n"
      ]
     }
    ],
@@ -243,20 +335,39 @@
     "vectors = convert_texts_to_vectors(greenquest_text_strings)\n",
     "vectors = adjust_vectors_to_power_of_2(vectors)\n",
     "\n",
-    "# Choose a query vector (for example, the first vector)\n",
+    "# Choose a query vector (This uses the first vector in the list)\n",
     "query_vector = vectors[0]\n",
     "\n",
     "# Define the number of top vectors to find (K)\n",
     "K = 3\n",
     "\n",
-    "# Run Grover's Algorithm for Top-K Scoring\n",
-    "top_k_results = []\n",
-    "for _ in range(K):\n",
-    "    found_index = run_grovers_algorithm_top_k(query_vector, vectors, K)\n",
-    "    top_k_results.append(found_index)\n",
+    "# Calculate similarity scores for all vectors using Grover's Algorithm\n",
+    "all_results = []\n",
+    "for i in range(1, len(vectors)):\n",
+    "    result = run_grovers_algorithm_top_k(vectors[i], vectors, greenquest_text_strings, 1)\n",
+    "    all_results.append(result[0])  # Append the first result from the Grover's Algorithm run\n",
     "\n",
-    "# Output the result\n",
-    "print(\"Indices of the top K found vectors:\", top_k_results)"
+    "# Sort all results by similarity score in descending order\n",
+    "sorted_all_results = sorted(all_results, key=lambda x: x['score'], reverse=True)\n",
+    "\n",
+    "# Select the top 3 results\n",
+    "top_3_results = sorted_all_results[:3]\n",
+    "\n",
+    "# Output the top 3 sorted results\n",
+    "for result in top_3_results:\n",
+    "    print(f\"Index: {result['index']}\")\n",
+    "    print(f\"Text: {result['text']}\")\n",
+    "    print(f\"Vector: {result['vector']}\")\n",
+    "    print(f\"Similarity Score: {result['score']:.4f}\")\n",
+    "    print(f\"Time taken: {result['time']:.4f} seconds\\n\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Conclusion\n",
+    "Overall, these experiments did produce some interesting finds, I'm still seeing some similarity scores at 1.000 which is interesting when it should be 0.99, I suppose it could be in the code but it is showing relevant texts that could be passed to a query synthesizer for a completed response. One note is that I'm not a expert, just a simple amateur freshman not even aiming for Computer Science. If there is anything irregular or weird in this findings that could help improve my comptency, please write me at chermsit@dickinson or drop a Github Issue!"
    ]
   }
  ],
