--- a/GroverVectorExperiment/GroverVector.ipynb
+++ b/GroverVectorExperiment/GroverVector.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Introduction to Grover Vector Experiment. \n",
+    "# Attempts to intergrate Grover's Algorithm into the Top-K Scoring System for Quadratic Speedup of Large Language Models.\n",
     "This is a primitive experiment as aforementioned in the README.md to use Grover's Algorithm for Vector Similarity Search. These series of experiments \n",
     "attempt to speed up Gaia's Vector Search process. Though these were mostly for fun, prototype versions of using Grover's Algorithm with Top-K scoring did make it into the first versions of Gaia though as of v1.0.4 for the sake of an decently operational demo to forgo the custom Top-K scoring system."
    ]
@@ -368,7 +368,7 @@
    "metadata": {},
    "source": [
     "# Conclusion\n",
-    "Overall, these experiments did produce some interesting finds, I'm still seeing some similarity scores at 1.000 which is interesting when it should be 0.99, I suppose it could be in the code but it is showing relevant texts that could be passed to a query synthesizer for a completed response. One note is that I'm not a expert, just a simple amateur freshman not even aiming for Computer Science. If there is anything irregular or weird in this findings that could help improve my comptency, please write me at chermsit@dickinson or drop a Github Issue!"
+    "Overall, these experiments did produce some interesting finds, I'm still seeing some similarity scores at 1.000 which is interesting when it should be 0.99, I suppose it could be in the code but it is showing relevant texts that could be passed to a query synthesizer for a completed response. One note is that I'm not a expert, just a simple amateur freshman not even aiming for Computer Science. If there is anything irregular or weird in this findings that could help improve my comptency, please write me at chermsit@dickinson.edu or drop a Github Issue!"
    ]
   }
  ],
