--- a/GroverVectorExperiment/GroverVector.ipynb
+++ b/GroverVectorExperiment/GroverVector.ipynb
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,7 +132,8 @@
     "from qiskit.circuit.library import Diagonal\n",
     "import numpy as np\n",
     "import time\n",
-    "from sklearn.feature_extraction.text import TfidfVectorizer"
+    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+    "from sklearn.metrics.pairwise import cosine_similarity"
    ]
   },
   {
@@ -217,22 +218,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
     "greenquest_text_strings = [\n",
-    "    \"Tell me about the Center for Sustainability Education (CSE) and it's objectives.\",  # Query vector\n",
+    "    \"Tell me about the Center for Sustainability Education (CSE) and its objectives.\",  # Query vector\n",
     "    \"The CSE at Dickinson focuses on integrating sustainability into the college's liberal arts curriculum and promoting civic action among students.\",\n",
     "    \"Sustainability and social justice are key components of Dickinson's educational approach, as guided by the Center for Sustainability Education.\",\n",
     "    \"Dickinson College's CSE has been instrumental in advancing sustainability and environmental awareness in higher education.\",\n",
-    "    \"How does the CSE's strategic plan address challenges like reduced staffing and financial resources while maintaining its sustainability goals?\",\n",
-    "    \"The Center for Sustainability Education emphasizes the importance of global interdependence and equity in its sustainability teachings.\",\n",
-    "    \"CSE's efforts to make antiracism and social justice central to sustainability practices reflect Dickinson College's commitment to inclusivity.\",\n",
-    "    \"What new goals has the Center for Sustainability Education set for the 2021-2026 period to enhance its educational and civic impact?\",\n",
-    "    \"Dickinson's CSE offers students opportunities to develop sustainability skills through various co-curricular programs and off-campus studies.\",\n",
-    "    \"As a leader in sustainability education, how does the Center for Sustainability Education at Dickinson attract and retain high-quality faculty and staff?\"\n",
-    "]\n"
+    "    \"Dickinson College has launched a space program to study the sustainability of life on Mars.\",\n",
+    "    \"The college's new mascot, a giant walking tree, symbolizes its focus on deep forest ecology.\",\n",
+    "    \"Dickinson's CSE has developed a groundbreaking technology to turn textbooks into renewable energy.\",\n",
+    "    \"The college plans to relocate to a fully underwater campus to promote marine biology studies.\",\n",
+    "    \"A recent study at Dickinson claims that listening to classical music increases plant growth.\",\n",
+    "    \"Dickinson College is famous for its annual underwater basket weaving competition.\",\n",
+    "    \"The CSE has introduced a program for training squirrels to assist in campus tree planting efforts.\"\n",
+    "]\n",
+    "\n"
    ]
   },
   {
@@ -244,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -259,74 +262,71 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Index: 4\n",
-      "Text: How does the CSE's strategic plan address challenges like reduced staffing and financial resources while maintaining its sustainability goals?\n",
-      "Vector: [0.         0.         0.         0.         0.26242935 0.\n",
-      " 0.         0.09702543 0.         0.         0.         0.\n",
-      " 0.         0.         0.         0.         0.         0.\n",
-      " 0.         0.         0.         0.26242935 0.         0.\n",
-      " 0.         0.         0.         0.14087948 0.         0.\n",
-      " 0.         0.         0.22308893 0.         0.         0.\n",
-      " 0.         0.         0.         0.         0.         0.26242935\n",
-      " 0.         0.         0.         0.22308893 0.         0.\n",
-      " 0.         0.         0.22308893 0.         0.         0.\n",
-      " 0.         0.         0.         0.         0.         0.\n",
-      " 0.19517645 0.         0.         0.         0.         0.26242935\n",
-      " 0.26242935 0.         0.         0.         0.         0.\n",
-      " 0.         0.         0.         0.         0.         0.26242935\n",
-      " 0.         0.         0.         0.         0.26242935 0.\n",
-      " 0.26242935 0.         0.         0.         0.         0.\n",
-      " 0.26242935 0.26242935 0.         0.         0.09702543 0.\n",
-      " 0.         0.12792354 0.         0.         0.         0.\n",
-      " 0.26242935]\n",
-      "Similarity Score: 1.0000\n",
-      "Time taken: 0.0270 seconds\n",
-      "\n",
-      "Index: 5\n",
-      "Text: The Center for Sustainability Education emphasizes the importance of global interdependence and equity in its sustainability teachings.\n",
+      "Index: 6\n",
+      "Text: Dickinson's CSE has developed a groundbreaking technology to turn textbooks into renewable energy.\n",
       "Vector: [0.         0.         0.         0.         0.         0.\n",
-      " 0.         0.1143364  0.         0.         0.         0.\n",
-      " 0.         0.         0.         0.         0.         0.\n",
-      " 0.         0.18363978 0.         0.         0.         0.\n",
-      " 0.         0.         0.         0.         0.         0.\n",
-      " 0.         0.         0.         0.16601475 0.         0.\n",
-      " 0.30925115 0.         0.         0.30925115 0.         0.\n",
-      " 0.         0.18363978 0.30925115 0.         0.         0.\n",
-      " 0.         0.         0.         0.         0.30925115 0.2299992\n",
-      " 0.         0.         0.         0.30925115 0.         0.\n",
-      " 0.2299992  0.         0.         0.         0.         0.\n",
-      " 0.         0.         0.         0.         0.         0.26289173\n",
       " 0.         0.         0.         0.         0.         0.\n",
       " 0.         0.         0.         0.         0.         0.\n",
       " 0.         0.         0.         0.         0.         0.\n",
-      " 0.         0.         0.         0.         0.22867279 0.30925115\n",
-      " 0.         0.3014945  0.         0.         0.         0.\n",
-      " 0.        ]\n",
+      " 0.         0.20026652 0.         0.         0.33021107 0.1662393\n",
+      " 0.         0.         0.         0.         0.33021107 0.\n",
+      " 0.         0.         0.         0.         0.         0.\n",
+      " 0.         0.33021107 0.         0.         0.22183162 0.\n",
+      " 0.         0.         0.         0.         0.2822524  0.\n",
+      " 0.         0.         0.         0.         0.         0.\n",
+      " 0.         0.         0.         0.         0.         0.\n",
+      " 0.         0.         0.         0.         0.         0.\n",
+      " 0.         0.         0.         0.         0.         0.\n",
+      " 0.         0.33021107 0.         0.         0.         0.\n",
+      " 0.         0.         0.         0.         0.33021107 0.\n",
+      " 0.33021107 0.         0.         0.20026652 0.         0.\n",
+      " 0.33021107 0.         0.         0.        ]\n",
       "Similarity Score: 1.0000\n",
-      "Time taken: 0.0240 seconds\n",
+      "Time taken: 0.0230 seconds\n",
       "\n",
-      "Index: 9\n",
-      "Text: As a leader in sustainability education, how does the Center for Sustainability Education at Dickinson attract and retain high-quality faculty and staff?\n",
+      "Index: 8\n",
+      "Text: A recent study at Dickinson claims that listening to classical music increases plant growth.\n",
       "Vector: [0.         0.         0.         0.         0.         0.\n",
-      " 0.         0.19818311 0.         0.         0.         0.\n",
-      " 0.22783953 0.22783953 0.26801769 0.         0.         0.\n",
-      " 0.         0.15915449 0.         0.         0.         0.\n",
+      " 0.         0.         0.         0.         0.         0.25675981\n",
       " 0.         0.         0.         0.         0.         0.\n",
-      " 0.         0.14387946 0.22783953 0.28775893 0.         0.\n",
-      " 0.         0.         0.         0.         0.26801769 0.\n",
-      " 0.         0.15915449 0.         0.         0.         0.\n",
-      " 0.26801769 0.         0.22783953 0.         0.         0.19933266\n",
-      " 0.         0.         0.         0.         0.         0.\n",
-      " 0.         0.         0.         0.26801769 0.         0.\n",
+      " 0.         0.         0.30038693 0.30038693 0.         0.\n",
+      " 0.         0.         0.         0.         0.         0.15122483\n",
       " 0.         0.         0.         0.         0.         0.\n",
       " 0.         0.         0.         0.         0.         0.\n",
-      " 0.         0.         0.         0.26801769 0.         0.\n",
-      " 0.         0.26801769 0.         0.         0.         0.26801769\n",
-      " 0.         0.         0.         0.         0.19818311 0.\n",
-      " 0.         0.13064763 0.         0.         0.         0.\n",
-      " 0.        ]\n",
+      " 0.         0.         0.30038693 0.         0.         0.\n",
+      " 0.         0.30038693 0.         0.         0.         0.\n",
+      " 0.         0.         0.         0.         0.         0.\n",
+      " 0.         0.30038693 0.         0.         0.         0.\n",
+      " 0.30038693 0.         0.         0.         0.         0.\n",
+      " 0.30038693 0.         0.         0.         0.         0.30038693\n",
+      " 0.         0.         0.         0.         0.         0.\n",
+      " 0.         0.25675981 0.         0.         0.         0.\n",
+      " 0.         0.30038693 0.         0.18217876 0.         0.\n",
+      " 0.         0.         0.         0.        ]\n",
       "Similarity Score: 1.0000\n",
-      "Time taken: 0.0271 seconds\n",
+      "Time taken: 0.0280 seconds\n",
+      "\n",
+      "Index: 1\n",
+      "Text: The CSE at Dickinson focuses on integrating sustainability into the college's liberal arts curriculum and promoting civic action among students.\n",
+      "Vector: [0.         0.26007496 0.         0.26007496 0.17471507 0.\n",
+      " 0.         0.         0.26007496 0.         0.         0.22230261\n",
+      " 0.         0.         0.         0.         0.         0.\n",
+      " 0.         0.26007496 0.         0.         0.14336997 0.\n",
+      " 0.         0.15773035 0.26007496 0.         0.         0.13093044\n",
+      " 0.         0.         0.         0.         0.         0.\n",
+      " 0.         0.         0.26007496 0.         0.         0.\n",
+      " 0.         0.         0.         0.         0.         0.\n",
+      " 0.         0.         0.         0.26007496 0.22230261 0.\n",
+      " 0.         0.         0.         0.         0.         0.26007496\n",
+      " 0.         0.         0.         0.         0.         0.\n",
+      " 0.         0.         0.         0.         0.1955027  0.\n",
+      " 0.         0.         0.         0.         0.26007496 0.\n",
+      " 0.         0.         0.         0.         0.         0.26007496\n",
+      " 0.         0.         0.15773035 0.         0.         0.\n",
+      " 0.         0.         0.26186087 0.         0.         0.\n",
+      " 0.         0.         0.         0.        ]\n",
+      "Similarity Score: 1.0000\n",
+      "Time taken: 0.0281 seconds\n",
       "\n"
      ]
     }
@@ -368,7 +368,7 @@
    "metadata": {},
    "source": [
     "# Conclusion\n",
-    "Overall, these experiments did produce some interesting finds, I'm still seeing some similarity scores at 1.000 which is interesting when it should be 0.99, I suppose it could be in the code but it is showing relevant texts that could be passed to a query synthesizer for a completed response. One note is that I'm not a expert, just a simple amateur freshman not even aiming for Computer Science. If there is anything irregular or weird in this findings that could help improve my comptency, please write me at chermsit@dickinson.edu or drop a Github Issue!"
+    "Overall, these experiments did produce some interesting finds, I'm still seeing some perfect similarity scores which is interesting, perhaps I need more samples for variance?, I suppose it could be in the code but it is showing relevant texts that could be passed to a query synthesizer for a completed response. Maybe it's a issue with Vectorization or Implementation of Grover's? To remedy, I've decided to use cosine similarity and then select the Top-K of that. One note is that I'm not a expert, just a simple amateur freshman not even aiming for Computer Science. If there is anything irregular or weird in this findings that could help improve my comptency, please write me at chermsit@dickinson.edu or drop a Github Issue!"
    ]
   }
  ],
