--- a/GroverVectorExperiment/GroverVector.ipynb
+++ b/GroverVectorExperiment/GroverVector.ipynb
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -227,6 +227,13 @@
     "    \"The CSE at Dickinson focuses on integrating sustainability into the college's liberal arts curriculum and promoting civic action among students.\",\n",
     "    \"Sustainability and social justice are key components of Dickinson's educational approach, as guided by the Center for Sustainability Education.\",\n",
     "    \"Dickinson College's CSE has been instrumental in advancing sustainability and environmental awareness in higher education.\",\n",
+    "    \"How does the CSE's strategic plan address challenges like reduced staffing and financial resources while maintaining its sustainability goals?\",\n",
+    "    \"The Center for Sustainability Education emphasizes the importance of global interdependence and equity in its sustainability teachings.\",\n",
+    "    \"CSE's efforts to make antiracism and social justice central to sustainability practices reflect Dickinson College's commitment to inclusivity.\",\n",
+    "    \"What new goals has the Center for Sustainability Education set for the 2021-2026 period to enhance its educational and civic impact?\",\n",
+    "    \"Dickinson's CSE offers students opportunities to develop sustainability skills through various co-curricular programs and off-campus studies.\",\n",
+    "    \"As a leader in sustainability education, how does the Center for Sustainability Education at Dickinson attract and retain high-quality faculty and staff?\",\n",
+    "    # False strings\n",
     "    \"Dickinson College has launched a space program to study the sustainability of life on Mars.\",\n",
     "    \"The college's new mascot, a giant walking tree, symbolizes its focus on deep forest ecology.\",\n",
     "    \"Dickinson's CSE has developed a groundbreaking technology to turn textbooks into renewable energy.\",\n",
@@ -235,6 +242,7 @@
     "    \"Dickinson College is famous for its annual underwater basket weaving competition.\",\n",
     "    \"The CSE has introduced a program for training squirrels to assist in campus tree planting efforts.\"\n",
     "]\n",
+    "\n",
     "\n"
    ]
   },
@@ -247,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -262,71 +270,98 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Index: 6\n",
+      "Index: 5\n",
+      "Text: The Center for Sustainability Education emphasizes the importance of global interdependence and equity in its sustainability teachings.\n",
+      "Vector: [0.         0.         0.         0.         0.         0.\n",
+      " 0.         0.14490597 0.         0.         0.         0.\n",
+      " 0.         0.         0.         0.         0.         0.\n",
+      " 0.         0.         0.         0.         0.         0.20375628\n",
+      " 0.         0.         0.         0.         0.         0.\n",
+      " 0.         0.         0.         0.         0.         0.\n",
+      " 0.         0.         0.         0.         0.         0.\n",
+      " 0.         0.18878964 0.         0.         0.31042159 0.\n",
+      " 0.         0.         0.31042159 0.         0.         0.\n",
+      " 0.         0.         0.17582495 0.         0.         0.\n",
+      " 0.31042159 0.         0.         0.         0.         0.\n",
+      " 0.         0.         0.         0.         0.31042159 0.22145805\n",
+      " 0.         0.         0.         0.         0.31042159 0.\n",
+      " 0.         0.         0.18878964 0.         0.         0.\n",
+      " 0.         0.         0.         0.         0.         0.\n",
+      " 0.         0.         0.         0.         0.         0.\n",
+      " 0.         0.         0.24312327 0.         0.         0.\n",
+      " 0.         0.         0.         0.         0.         0.\n",
+      " 0.         0.         0.         0.         0.         0.\n",
+      " 0.         0.         0.         0.         0.         0.\n",
+      " 0.         0.         0.         0.         0.         0.\n",
+      " 0.         0.         0.         0.         0.         0.\n",
+      " 0.2729159  0.         0.31042159 0.         0.         0.\n",
+      " 0.         0.2729159  0.         0.         0.         0.\n",
+      " 0.         0.         0.         0.         0.         0.\n",
+      " 0.        ]\n",
+      "Similarity Score: 1.0000\n",
+      "Time taken: 0.0260 seconds\n",
+      "\n",
+      "Index: 12\n",
       "Text: Dickinson's CSE has developed a groundbreaking technology to turn textbooks into renewable energy.\n",
       "Vector: [0.         0.         0.         0.         0.         0.\n",
       " 0.         0.         0.         0.         0.         0.\n",
       " 0.         0.         0.         0.         0.         0.\n",
       " 0.         0.         0.         0.         0.         0.\n",
-      " 0.         0.20026652 0.         0.         0.33021107 0.1662393\n",
-      " 0.         0.         0.         0.         0.33021107 0.\n",
       " 0.         0.         0.         0.         0.         0.\n",
-      " 0.         0.33021107 0.         0.         0.22183162 0.\n",
-      " 0.         0.         0.         0.         0.2822524  0.\n",
-      " 0.         0.         0.         0.         0.         0.\n",
+      " 0.         0.         0.         0.         0.17679705 0.\n",
+      " 0.         0.         0.         0.33385159 0.15584318 0.\n",
+      " 0.         0.         0.         0.         0.         0.33385159\n",
       " 0.         0.         0.         0.         0.         0.\n",
       " 0.         0.         0.         0.         0.         0.\n",
+      " 0.         0.         0.33385159 0.         0.         0.21913539\n",
       " 0.         0.         0.         0.         0.         0.\n",
-      " 0.         0.33021107 0.         0.         0.         0.\n",
-      " 0.         0.         0.         0.         0.33021107 0.\n",
-      " 0.33021107 0.         0.         0.20026652 0.         0.\n",
-      " 0.33021107 0.         0.         0.        ]\n",
+      " 0.         0.         0.         0.         0.         0.29151326\n",
+      " 0.         0.         0.         0.         0.         0.\n",
+      " 0.         0.         0.         0.         0.         0.\n",
+      " 0.         0.         0.         0.         0.         0.\n",
+      " 0.         0.         0.         0.         0.         0.\n",
+      " 0.         0.         0.         0.         0.         0.\n",
+      " 0.         0.         0.         0.         0.         0.\n",
+      " 0.         0.         0.         0.         0.33385159 0.\n",
+      " 0.         0.         0.         0.         0.         0.\n",
+      " 0.         0.         0.         0.         0.         0.\n",
+      " 0.         0.         0.         0.33385159 0.         0.33385159\n",
+      " 0.         0.         0.         0.17679705 0.         0.\n",
+      " 0.33385159 0.         0.         0.         0.         0.\n",
+      " 0.        ]\n",
       "Similarity Score: 1.0000\n",
-      "Time taken: 0.0230 seconds\n",
+      "Time taken: 0.0300 seconds\n",
       "\n",
-      "Index: 8\n",
-      "Text: A recent study at Dickinson claims that listening to classical music increases plant growth.\n",
+      "Index: 16\n",
+      "Text: The CSE has introduced a program for training squirrels to assist in campus tree planting efforts.\n",
       "Vector: [0.         0.         0.         0.         0.         0.\n",
-      " 0.         0.         0.         0.         0.         0.25675981\n",
       " 0.         0.         0.         0.         0.         0.\n",
-      " 0.         0.         0.30038693 0.30038693 0.         0.\n",
-      " 0.         0.         0.         0.         0.         0.15122483\n",
+      " 0.         0.         0.31757259 0.         0.         0.\n",
+      " 0.         0.         0.         0.         0.24872396 0.\n",
+      " 0.         0.         0.         0.         0.         0.\n",
+      " 0.         0.         0.         0.         0.16817622 0.\n",
+      " 0.         0.         0.         0.         0.         0.\n",
+      " 0.         0.         0.         0.27729872 0.         0.\n",
+      " 0.         0.         0.         0.         0.         0.\n",
+      " 0.         0.         0.17987532 0.         0.         0.\n",
+      " 0.         0.         0.         0.         0.         0.20845009\n",
+      " 0.         0.         0.         0.         0.         0.22655965\n",
+      " 0.         0.         0.         0.         0.         0.\n",
+      " 0.31757259 0.         0.         0.         0.         0.\n",
       " 0.         0.         0.         0.         0.         0.\n",
       " 0.         0.         0.         0.         0.         0.\n",
-      " 0.         0.         0.30038693 0.         0.         0.\n",
-      " 0.         0.30038693 0.         0.         0.         0.\n",
       " 0.         0.         0.         0.         0.         0.\n",
-      " 0.         0.30038693 0.         0.         0.         0.\n",
-      " 0.30038693 0.         0.         0.         0.         0.\n",
-      " 0.30038693 0.         0.         0.         0.         0.30038693\n",
+      " 0.         0.         0.         0.         0.         0.31757259\n",
+      " 0.         0.27729872 0.         0.         0.         0.\n",
       " 0.         0.         0.         0.         0.         0.\n",
-      " 0.         0.25675981 0.         0.         0.         0.\n",
-      " 0.         0.30038693 0.         0.18217876 0.         0.\n",
-      " 0.         0.         0.         0.        ]\n",
+      " 0.         0.         0.         0.         0.         0.31757259\n",
+      " 0.         0.         0.         0.         0.         0.\n",
+      " 0.         0.         0.         0.         0.         0.\n",
+      " 0.         0.13960145 0.         0.16817622 0.31757259 0.27729872\n",
+      " 0.         0.         0.         0.         0.         0.\n",
+      " 0.        ]\n",
       "Similarity Score: 1.0000\n",
-      "Time taken: 0.0280 seconds\n",
-      "\n",
-      "Index: 1\n",
-      "Text: The CSE at Dickinson focuses on integrating sustainability into the college's liberal arts curriculum and promoting civic action among students.\n",
-      "Vector: [0.         0.26007496 0.         0.26007496 0.17471507 0.\n",
-      " 0.         0.         0.26007496 0.         0.         0.22230261\n",
-      " 0.         0.         0.         0.         0.         0.\n",
-      " 0.         0.26007496 0.         0.         0.14336997 0.\n",
-      " 0.         0.15773035 0.26007496 0.         0.         0.13093044\n",
-      " 0.         0.         0.         0.         0.         0.\n",
-      " 0.         0.         0.26007496 0.         0.         0.\n",
-      " 0.         0.         0.         0.         0.         0.\n",
-      " 0.         0.         0.         0.26007496 0.22230261 0.\n",
-      " 0.         0.         0.         0.         0.         0.26007496\n",
-      " 0.         0.         0.         0.         0.         0.\n",
-      " 0.         0.         0.         0.         0.1955027  0.\n",
-      " 0.         0.         0.         0.         0.26007496 0.\n",
-      " 0.         0.         0.         0.         0.         0.26007496\n",
-      " 0.         0.         0.15773035 0.         0.         0.\n",
-      " 0.         0.         0.26186087 0.         0.         0.\n",
-      " 0.         0.         0.         0.        ]\n",
-      "Similarity Score: 1.0000\n",
-      "Time taken: 0.0281 seconds\n",
+      "Time taken: 0.0240 seconds\n",
       "\n"
      ]
     }
@@ -368,7 +403,7 @@
    "metadata": {},
    "source": [
     "# Conclusion\n",
-    "Overall, these experiments did produce some interesting finds, I'm still seeing some perfect similarity scores which is interesting, perhaps I need more samples for variance?, I suppose it could be in the code but it is showing relevant texts that could be passed to a query synthesizer for a completed response. Maybe it's a issue with Vectorization or Implementation of Grover's? To remedy, I've decided to use cosine similarity and then select the Top-K of that. One note is that I'm not a expert, just a simple amateur freshman not even aiming for Computer Science. If there is anything irregular or weird in this findings that could help improve my comptency, please write me at chermsit@dickinson.edu or drop a Github Issue!"
+    "Overall, these experiments did produce some interesting finds, I'm still seeing some perfect similarity scores which is interesting. Either my Top-K implementation isn't working or there's something wrong with the similarity scoring? I may want to consult someone more proficent than me. Maybe it's a issue with Vectorization or Implementation of Grover's? One note is that I'm not a expert, just a simple amateur freshman not even aiming for Computer Science. If there is anything irregular or weird in this findings that could help improve my comptency, please write me at chermsit@dickinson.edu or drop a Github Issue!"
    ]
   }
  ],
