--- a/GroverVectorExperiment/GroverVector.ipynb
+++ b/GroverVectorExperiment/GroverVector.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Attempts to intergrate Grover's Algorithm into the Top-K Scoring System for Quadratic Speedup of Large Language Models.\n",
+    "# Attempts to intergrate Grover's Algorithm into the Top-K Scoring System for Quadratic Speedup of Vector Search for Large Language Models.\n",
     "This is a primitive experiment as aforementioned in the README.md to use Grover's Algorithm for Vector Similarity Search. These series of experiments \n",
     "attempt to speed up Gaia's Vector Search process. Though these were mostly for fun, prototype versions of using Grover's Algorithm with Top-K scoring did make it into the first versions of Gaia though as of v1.0.4 for the sake of an decently operational demo to forgo the custom Top-K scoring system."
    ]
