--- a/GroverVectorExperiment/GroverVector.ipynb
+++ b/GroverVectorExperiment/GroverVector.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Attempts to intergrate Grover's Algorithm into the Top-K Scoring System for Quadratic Speedup of Large Language Models.\n",
+    "# Attempts to intergrate Grover's Algorithm for Retrieval and utilize the Top-K Scoring System for Quadratic Speedup of Large Language Model Search.\n",
     "This is a primitive experiment as aforementioned in the README.md to use Grover's Algorithm for Vector Similarity Search. These series of experiments \n",
     "attempt to speed up Gaia's Vector Search process. Though these were mostly for fun, prototype versions of using Grover's Algorithm with Top-K scoring did make it into the first versions of Gaia though as of v1.0.4 for the sake of an decently operational demo to forgo the custom Top-K scoring system."
    ]
@@ -15,7 +15,7 @@
    "source": [
     "# Grover's Algorithm Case Study with GreenQuest\n",
     "\n",
-    "Grover's algorithm allows us to find a particular register or in this case vector in an unordered database with $N$ entries in just $O(\\sqrt{N})$ steps, compared to the best classical algorithm taking on average $N/2$ steps, thereby providing a __quadratic speedup__.\n",
+    "Grover's algorithm allows us to find a particular register or in this case vector in an unordered database with $N$ entries in just $O(\\sqrt{N})$ steps, compared to the best classical algorithm taking on average $N/2$ steps, thereby providing a __quadratic speedup__ for relevant document retrieval.\n",
     "\n",
     "For large databases (with a large number of entries, $N$), a quadratic speedup can provide a significant advantage. For a database with one million entries, a quantum computer running Grover's algorithm would need about 1000 runs, while a classical computer would need, on average, $500$k runs.\n",
     "\n",
@@ -211,7 +211,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now, this is the fun part. I've defined the code below to define the Top Vectors. The code below should vectorize everything and run Grover's algorithm for Top-K for scoring. Essentially, primitive Quantum Vector Searching using Top-K scoring. "
+    "Now, this is the fun part. I've defined the code below to define the Top Vectors. The code below should vectorize everything and run Grover's algorithm for Top-K for scoring. Essentially, primitive Quantum Vector Search (using Grover's for retrieval and then Top-K for ranking)."
    ]
   },
   {
@@ -339,7 +339,7 @@
     "K = 3\n",
     "\n",
     "# Define the number of times to run Grover's Algorithm.\n",
-    "number_of_grover_runs = 2\n",
+    "number_of_grover_runs = 3\n",
     "\n",
     "# Limit the range to the original text vectors\n",
     "original_vector_count = len(greenquest_text_strings)\n",
@@ -376,7 +376,7 @@
    "metadata": {},
    "source": [
     "# Conclusion\n",
-    "Overall, these experiments did produce some interesting finds, I'm still seeing some perfect similarity scores which is interesting. Either my Top-K implementation isn't working or there's something wrong with the similarity scoring? I may want to consult someone more proficent than me. Maybe it's a issue with Vectorization or Implementation of Grover's? One note is that I'm not a expert, just a simple amateur freshman not even aiming for Computer Science. If there is anything irregular or weird in this findings that could help improve my comptency, please write me at chermsit@dickinson.edu or drop a Github Issue!"
+    "Overall, these experiments did produce some interesting finds. I'm aware that Grover's Algorithm is NOT for sorting or ranking, but rather confirm the existence of those elements.I'm most likely talking out of thin air but likely, I could rework this notebook to grab text using Grover's and then use something like Cosine Similarity. One note is that I'm not a expert, just a simple amateur freshman not even aiming for Computer Science. If there is anything irregular or weird in this findings that could help improve my comptency, please write me at chermsit@dickinson.edu or drop a Github Issue!"
    ]
   }
  ],
